package Controller;

import Algorithm.MapGraph;
import Model.Map;
import Model.Mission;

public class Controller {
    private Map cityMap;
    private Mission mission;
    private MapGraph mapGraph;

}
