package Controller;

public class InitialState implements State{
}
